Programming languages and paradigms/Interpreter/examples/bad/non_ret_func_as_value.ho
func main() {
    var x = func() {}(); // error:2:5: non-return func application used as value
}